--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@types/google.maps": "^3.55.10",
+    "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.3.3",
+    "ngx-bootstrap-slider": "^2.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
