--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/google.maps": "^3.55.10",
     "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.1",
     "ngx-bootstrap-slider": "^2.1.0",
     "popper.js": "^1.16.1",
