--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod && cp ./_redirects ./dist/tu-proyecto/",
+    "build": "ng build --configuration production && cp ./_redirects ./dist/tu-proyecto/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy": "gh-pages -d dist"
